test/library/standard/Version/versionCastIsParam.good
versionCastIsParam.chpl:7: warning: 1.23.0 (vass)
versionCastIsParam.chpl:13: error: Yay!
